# pnut

./: Cargo.toml  README.md  ROADMAP.md
doc/: pnut.1  pnut.toml.5  pnut.toml.5.scd
examples/: full.toml
kafel/: Cargo.toml
kafel/src/: ast.rs  codegen.rs  error.rs  lib.rs  parser.rs  resolve.rs  resolver.rs
kafel/src/codegen/: expr.rs  reverse.rs
kafel/src/tests/: include_errors.rs  parser_errors.rs  resolver.rs
kafel/tests/: compile.rs  filesystem_resolver.rs  includes.rs  stdlib.rs
pnut/: Cargo.toml
pnut-cli/src/: main.rs
pnut-cli/tests/: mount_ordering.rs  seccomp_diagnostics.rs
pnut/src/: caps.rs  mount.rs  namespace.rs  sandbox.rs
pnut/src/mount/: dev.rs  syscall.rs
pnut/src/sandbox/: seccomp.rs
