[workspace]
members = ["kafel", "pnut", "pnut-child", "pnut-cli"]
default-members = ["kafel", "pnut", "pnut-child", "pnut-cli"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mikedanese/pnut"
repository = "https://github.com/mikedanese/pnut"
categories = ["os::linux-apis", "command-line-utilities"]
keywords = ["sandbox", "seccomp", "namespaces", "linux", "container"]

[workspace.dependencies]
# Internal crates
kafel = { path = "kafel", version = "0.2.0" }
pnut = { path = "pnut", version = "0.2.0" }

# Core
libc = "0.2"
thiserror = "2"
nix = { version = "0.31", features = ["mount", "sched", "signal", "user", "process", "hostname", "resource", "net", "fs", "poll"] }

# Dev
tempfile = "3.27.0"
