[package]
name = "pnut"
description = "Unprivileged Linux sandbox using namespaces, seccomp, and Landlock"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[lib]
name = "pnut"
path = "src/lib.rs"

[dependencies]
kafel = { workspace = true }
pnut-child = { path = "../pnut-child", version = "0.2.0" }
thiserror = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
landlock = "0.4.4"
caps = "0.5.6"
bumpalo = "3.20.2"
